# SMBDesigner

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: document_ingestor.py
