[project]
name = "smbdesigner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "celery>=5.5.3",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "langchain-text-splitters>=0.3.8",
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "pdfminer-six>=20250506",
    "prometheus-client>=0.22.1",
    "pydantic>=2.11.5",
    "pymupdf>=1.26.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "uvicorn[standard]>=0.34.3",
    "watchdog>=6.0.0",
]
